# rightmove-scraper

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py
src/scraper/: constants.py  fetcher.py  http_client.py  parser.py  scraper.py  sitemap.py
src/scraper/database/: __init__.py  base.py  models.py  postgres.py  sqlite.py
src/scraper/utils/: __init__.py  url.py
